put height auto on the img in about to make sure that its not getting streched or squashed in the browser window

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -108,6 +108,13 @@ header .container {
 header img {
     display: block;
     margin: 0 auto 20px;
+    height: 200px;
+    width: 200px;
+    border-radius: 50px;
+}
+
+.img-responsive:hover {
+    background-image: url("img/profile_picture2.jpg");
 }
 
 header .intro-text .name {
@@ -478,3 +485,15 @@ footer .footer-below {
 h1.my_project {
     padding: 10px;
 }
+.links_to_projects {
+    display: initial;
+}
+
+.img-responsive2 {
+    display: block;
+    margin: 0 auto 20px;
+    height: auto;
+    width: 300px;
+    border-radius: 50px;
+}
+
